# where-rs

./: ._.direnv  ._.envrc  ._Cargo.toml  ._LICENSE  ._flake.nix  ._shell.nix  ._target  ._where-rs  ._whered  ._whrd  .gitlab-ci.yml  Cargo.toml  build.sh  config.toml
.direnv/: flake-profile-1-link
.github/workflows/: build_where.yml
where-rs/: ._Cargo.toml  ._src  Cargo.toml
where-rs/src/: config.rs  main.rs  servers.rs  ui.rs
where-shared/: Cargo.toml
where-shared/src/: error.rs  lib.rs  parse.rs
whered/: ._Cargo.toml  ._src  Cargo.toml
whered/src/: ._main.rs  main.rs
whrd/: ._Cargo.toml  ._src  Cargo.toml
whrd/src/: lib.rs
