[package]
name = "where-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "where"
path = "src/main.rs"

[dependencies]
where-shared = { path = "../where-shared" }
chrono = "0.4.35"
toml = "0.8.11"
serde = { version = "1.0.197", features = ["derive"] }
