[package]
name = "where-rs"
version = "1.0.0-rc"
edition = "2021"
description = "A small Rust client for the WHRD/UDP protocol, to access a list of logged in users on multiple systems at once."
authors = ["Raindrops", "ryze132"]

[[bin]]
name = "where"
path = "src/main.rs"

[dependencies]
where-shared = { path = "../where-shared" }
chrono = "0.4.35"
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
